// FixFlow ERD — paste into https://dbdiagram.io
// Generated from PostgreSQL schema (domain tables only)

Project fixflow {
  database_type: 'PostgreSQL'
  Note: 'Electronic Device Repair Management System'
}

Table users {
  id bigint [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp
  password varchar(255) [not null]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
  role varchar(255) [not null, note: 'customer | technician | admin']
  Note: 'Customers, technicians, and admins'
}

Table repair_requests {
  id bigint [pk, increment]
  reference varchar(255) [unique]
  user_id bigint [not null]
  technician_id bigint
  device_type varchar(255) [not null]
  brand varchar(255)
  model varchar(255)
  serial_number varchar(255)
  issue_description text [not null]
  priority varchar(255) [not null, note: 'low | medium | high']
  status varchar(255) [not null, note: 'pending → assigned → diagnosing → quoted → repairing → completed | declined']
  image_path varchar(255)
  created_at timestamp
  updated_at timestamp
  diagnosis_notes text
  fulfillment_status varchar(255) [note: 'awaiting_invoice | awaiting_payment | awaiting_choice | ready_for_pickup | out_for_delivery | fulfilled']
  fulfillment_method varchar(255)
  delivery_address text
  quote_service_charge numeric
  quote_parts_cost numeric
  quote_discount numeric
  diagnosis_fee numeric
  quote_notes text
  quoted_at timestamp
  quote_responded_at timestamp
  Note: 'Core repair lifecycle + quote fields'
}

Table invoices {
  id bigint [pk, increment]
  invoice_number varchar(255) [unique]
  repair_request_id bigint [unique, not null]
  user_id bigint [not null]
  service_charge numeric [not null]
  parts_cost numeric [not null]
  discount numeric [not null]
  total numeric [not null]
  payment_status varchar(255) [not null, note: 'draft | unpaid | paid']
  created_at timestamp
  updated_at timestamp
  payment_method varchar(255)
  stripe_checkout_session_id varchar(255)
  stripe_payment_intent_id varchar(255)
  paid_at timestamp
  Note: 'Billing after repair or diagnosis-fee if declined'
}

Table warranties {
  id bigint [pk, increment]
  warranty_code varchar(255) [unique]
  repair_request_id bigint [unique, not null]
  user_id bigint [not null]
  start_date date [not null]
  end_date date [not null]
  created_at timestamp
  updated_at timestamp
  Note: 'Issued for completed repairs'
}

Table messages {
  id bigint [pk, increment]
  repair_request_id bigint [not null]
  user_id bigint [not null]
  body text [not null]
  read_at timestamp
  created_at timestamp
  updated_at timestamp
  Note: 'Chat thread per repair request'
}

Table technician_applications {
  id bigint [pk, increment]
  user_id bigint [unique, not null]
  phone varchar(255) [not null]
  years_experience smallint [not null]
  specialties varchar(255) [not null]
  certification varchar(255)
  motivation text [not null]
  status varchar(255) [not null, note: 'pending | approved | rejected']
  admin_notes text
  reviewed_by bigint
  reviewed_at timestamp
  created_at timestamp
  updated_at timestamp
  document_path varchar(255) [note: 'CV / certificate upload']
  document_original_name varchar(255)
  Note: 'Apply → admin approve/reject'
}

// Relationships
Ref: invoices.repair_request_id > repair_requests.id
Ref: invoices.user_id > users.id
Ref: messages.repair_request_id > repair_requests.id
Ref: messages.user_id > users.id
Ref: repair_requests.user_id > users.id
Ref: repair_requests.technician_id > users.id
Ref: technician_applications.user_id > users.id
Ref: technician_applications.reviewed_by > users.id
Ref: warranties.repair_request_id > repair_requests.id
Ref: warranties.user_id > users.id
